--- a/my-App/src/assets/styles/search.css
+++ b/my-App/src/assets/styles/search.css
@@ -8,6 +8,12 @@
     text-align: center;
     flex: 1 1 200px;
   }
+
+  .recipe-result div {
+    font-size: 14px;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
   
   button {
     margin: 30px;
@@ -27,6 +33,8 @@
   @media screen and (max-width:768px) {
     .recipe-results{
       flex-direction: column;
+      align-items: center;
+      justify-content: center;
     }
   
     .recipe-result {
